scripts/nullaway/annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8.txt
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/SavePredictiveEngineProjectService.java:23: error: [NullAway] dereferenced expression projectDAO is @Nullable
		projectDAO.save(project);
		          ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/model2/Project.java:63: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return team;
		^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/database/Connection.java:42: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return collection.get(id);
		^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/database/Connection.java:57: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectHashMapDAO.java:13: error: [NullAway] @NonNull field connectionManager not initialized
	private ConnectionManager connectionManager;
	                          ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectHashMapDAO.java:15: error: [NullAway] @NonNull field projectMapper not initialized
	private ProjectMapper projectMapper;
	                      ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:19: error: [NullAway] dereferenced expression project is @Nullable
		projectMap.put("id", project.getId());
		                            ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/dip/after/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
		for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
		                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ocp/before/Employee.java:83: error: [NullAway] switch expression type is @Nullable
		switch (type) {
		        ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/before/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
		for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
		                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/ioc/after/ProjectMapper.java:41: error: [NullAway] enhanced-for expression (List<Map<String, Object>>) projectMap.get("team") is @Nullable
		for (Map<String, Object> employeeMap : (List<Map<String, Object>>) projectMap.get("team")) {
		                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/freesideeffect/before/UserValidator.java:18: error: [NullAway] dereferenced expression cryptographer is @Nullable
			String phrase = cryptographer.decrypt(codedPhrase, password);
			                             ^
    (see http://t.uber.com/nullaway )
../annotator/url9e019a0ee9_elfrasco_design_principles_tgz-pJ8-ar_com_epidataconsulting_principles_ioc_before_SavePredictiveEngineProjectServiceJ8/src/ar/com/epidataconsulting/principles/freesideeffect/after/UserValidator.java:18: error: [NullAway] dereferenced expression cryptographer is @Nullable
			String phrase = cryptographer.decrypt(codedPhrase, password);
			                             ^
    (see http://t.uber.com/nullaway )
13 errors
